--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,20 +12,22 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.8
+  fluttertoast: ^8.2.12
+  flutter_naver_map: ^1.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  http: ^0.13.6
   flutter_lints: ^5.0.0
-
   flutter_native_splash: ^2.0.1+1
-
-flutter_native_splash:
-  color: "#FFA724"
-  image: assets/logoo.png
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/map.png
+
+flutter_native_splash:
+  color: "#FFA724"
+  image: assets/logoo.png
