--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,10 +25,10 @@ dev_dependencies:
     sdk: flutter
   flutter_lints: ^5.0.0
 
-  flutter_native_splash: ^2.0.1+1
+  flutter_native_splash: ^2.3.5
 
 flutter_native_splash:
-  color: "#FFA724"
+  color: "#FFFFFF"
   image: assets/logoo.png
 
 flutter:
