--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   http_parser: ^4.0.2          # ✅ MIME 설정용
   fluttertoast: ^8.2.4         # ✅ 토스트 메시지
   flutter_naver_map: ^1.3.1   # ✅ 네이버 지도 플러그인
+  flutter_secure_storage: ^9.2.4
 
 dev_dependencies:
   flutter_test:
