--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,3 +43,4 @@ flutter:
     - assets/markers/purple.png
     - assets/markers/red.png
     - assets/markers/yellow.png
+    - assets/markers/event.png
