--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #FCM 관련 패키지 추가
+  firebase_core: ^2.25.3
+  firebase_messaging: ^14.7.14
+  flutter_local_notifications: ^16.3.1+1
+
+  # 웹소켓 관련 패키지
+  stomp_dart_client: ^2.0.0  # 최신 버전 확인 필요
+
   cupertino_icons: ^1.0.8
   image_picker: ^1.0.7         # ✅ 이미지 선택용
   dio: ^5.4.0                  # ✅ HTTP 통신용
