--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_naver_map: ^1.3.1
   flutter_secure_storage: ^9.2.4
   url_launcher: ^6.1.7
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
