--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   flutter_secure_storage: ^9.2.4
   url_launcher: ^6.1.7
   provider: ^6.1.1
+  app_links: ^3.4.5
 
 dev_dependencies:
   flutter_test:
