실기 테스트

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,6 +48,14 @@
 			<string>UIInterfaceOrientationLandscapeRight</string>
 		</array>
 		
+		<!-- 위치 권한 설정 -->
+		<key>NSLocationWhenInUseUsageDescription</key>
+		<string>지도에서 현재 위치를 표시하고 주변 일정을 찾기 위해 위치 정보가 필요합니다.</string>
+		<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+		<string>지도에서 현재 위치를 표시하고 주변 일정을 찾기 위해 위치 정보가 필요합니다.</string>
+		<key>NSLocationAlwaysUsageDescription</key>
+		<string>지도에서 현재 위치를 표시하고 주변 일정을 찾기 위해 위치 정보가 필요합니다.</string>
+		
 		<!-- OAuth2 딥링크 설정 -->
 		<key>CFBundleURLTypes</key>
 		<array>
